--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,11 @@
  * governing permissions and limitations under the License.
  */
 
+@import url("../blocks/custom_styles/banner.css");
+
+
+
+
 :root {
   /* colors */
   --background-color: white;
