--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,3 +18,22 @@ footer .footer p {
     padding: 40px 32px 24px;
   }
 }
+
+.footer-col {
+  display: flex;
+  font-size: small;
+}
+
+.footer-col h2 {
+  font-size: small;
+}
+
+.footer-col img{
+width: 200px;
+height: 100%;
+}
+
+.footer-links > div > div {
+  display: flex;
+  gap: 20px;
+}
