--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 footer {
-  background-color: var(--light-color);
+  background-color: white;
   font-size: var(--body-font-size-xs);
+  border-top: 1pt solid gainsboro;
 }
 
 footer .footer > div {
@@ -19,10 +20,36 @@ footer .footer p {
   }
 }
 
+
 .footer-col {
   display: flex;
   font-size: small;
+  justify-content: space-around;
+  padding: 10px;
+  padding-bottom: 50px;
+  margin-bottom: 50px;
+  border-bottom: 1px solid gainsboro;
 }
+
+.footer-col > div > div img {
+  width: 45px;
+}
+
+.footer-col p strong {
+  font-family: scotia;
+}
+
+
+.footer-col > div:last-child > div {
+  display: flex;
+  gap: 15px;
+}
+
+.footer-col > div:last-child > div img {
+  width: 25px;
+  height: 23px;
+}
+
 
 .footer-col h2 {
   font-size: small;
